--- a/movingsensors/index.html
+++ b/movingsensors/index.html
@@ -18,18 +18,19 @@
 	<header>
 
 		<div id="logo-container">
-			<div id="logo"><a href="/">The Problem of Moving Sensors:</a></div>
+			<div id="logo"><a href="#">The Problem of Moving Sensors:</a></div>
 			<div id="subtitle">Defining future goals and indicators of progress for SLAM</div>
 			<div id="subtitle">Workshop in conjunction with <a href="http://www.roboticsconference.org/">RSS 2015</a></div>
 		</div>
-<!-- 		<nav>
+ 		<nav>
 			<ul>
-				<li><a href="#">Link 1</a></li>
-				<li><a href="#">Link 2</a></li>
-				<li><a href="#">Link 3</a></li> 
-				<li><a href="mailto:your@address.com" class="bordered">Contact</a></li>
+				<li><a href="#organizers" class="bordered">Organizers</a></li>
+				<li><a href="#organizers" class="bordered">Important Dates</a></li>
+				<li><a href="#call" class="bordered">Call for submissions</a></li> 
+				<li><a href="#program" class="bordered" >Program</a></li>
+				<li><a href="#program" class="bordered">Ask a question</a></li>
 			</ul>
-		</nav> -->
+		</nav> 
 	</header>
 
 	<div id="content">
@@ -49,15 +50,16 @@
 				</p>
 			</div>
 		</section>
+		-->
 		<section class="row">
 			<div class="col-full">
-				<h2>Objective</h2>
+				<h1>Objective</h1>
 			    <p>
 			      Simultaneous Localization and Mapping (SLAM) is an important problem in mobile robotics and its solution is fundamental in order to achieve true autonomy. As soon as sensors start moving in an environment, we have a SLAM problem. The goal of the workshop is to define an agenda for future research on SLAM and will mainly consist of two main themes: firstly, the workshop will provide an occasion to discuss what the community expects from a complete SLAM solution and secondly, top researchers in the field will provide an overview on where we stand today and what future directions need to be taken to achieve the perceived goal.
 			    </p>
 			</div>
 		</section>
-		-->
+		<a name="organizers"></a>
 		<section class="row">
 			<div class="col">
 				<h1>Organizers</h1>
@@ -101,7 +103,7 @@
 			</div>
 		</section>
 		
-		
+		<a name="call"></a>
 		</section>
 		<section class="row">
 			<div class="col-full">
@@ -142,6 +144,7 @@ Program Committee
 		</section>
 		-->
 
+		<a name="program"></a>
 		<section class="row">
 			<div class="col">
 				<h1>Program</h1>
