--- a/movingsensors/index.html
+++ b/movingsensors/index.html
@@ -75,7 +75,7 @@
 				    </i>
 				    
 				    <h2>Henry Carrillo</a> </h2> 
-				    <i>University of Zaragoza, Spain. (<a href="http://www.hcarrillo.com">webpage</a>)
+				    <i>Pontificia Universidad Javeriana, Colombia. (<a href="http://www.hcarrillo.com">webpage</a>)
 				    </i>
 				    
 				    <h2>Yasir Latif</h2>
@@ -127,8 +127,7 @@ Program Committee
 <li><b>Paul Huang</b>                              University of Delaware, USA           </li> 
 <li><b>Dorian Galvez-Lopez</b>            University of Colorado, USA           </li> 
 <li><b>José Neira</b>                               University of Zaragoza, Spain    </li>        
-<li><b>Luis Puig</b>                                 University of Pennsylvania, USA     </li>       
-<li><b>Ian Reid</b>                                   University of Adelaide, Australia </li>
+<li><b>Luis Puig</b>                                 University of Washington, USA     </li>       
 </ul>
 </p>
 			</div>
