landing page update to follow to WS page .. for now!

--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-hello world
+<html>
+<head></head>
+
+<body>
+
+The webpage for the SLAM workshop at RSS 2015 can be found <a href="./movingsensors/index.html"> here</a>.
+
+</body>
+</html>
+
