--- a/movingsensors/index.html
+++ b/movingsensors/index.html
@@ -18,8 +18,8 @@
 	<header>
 
 		<div id="logo-container">
-			<div id="logo"><a href="#">The Problem of Moving Sensors:</a></div>
-			<div id="subtitle">Defining future goals and indicators of progress for SLAM</div>
+			<div id="logo"><a>The Problem of Moving Sensors:</a></div>
+			<div id="subtitle">Setting future goals and indicators of progress for SLAM </div>
 			<div id="subtitle">Workshop in conjunction with <a href="http://www.roboticsconference.org/">RSS 2015</a></div>
 		</div>
  		<nav>
