correcting the title again!!

--- a/movingsensors/index.html
+++ b/movingsensors/index.html
@@ -18,7 +18,7 @@
 	<header>
 
 		<div id="logo-container">
-			<div id="logo"><a>The Problem of Moving Sensors:</a></div>
+			<div id="logo"><a>The Problem of Mobile Sensors:</a></div>
 			<div id="subtitle">Setting future goals and indicators of progress for SLAM </div>
 			<div id="subtitle">Workshop in conjunction with <a href="http://www.roboticsconference.org/">RSS 2015</a></div>
 		</div>
