confirmed speakers added

--- a/movingsensors/index.html
+++ b/movingsensors/index.html
@@ -153,6 +153,22 @@ Program Committee
 				<p>
 					To be announced.
 				</p>
+				<h1>Confirmed Speakers</h1>
+				<p>
+					<ul>
+					<li><b>John Leonard</b> Massachusetts Institute of Technology</li>
+					<li><b>Davide Scaramuzza</b> University of Zurich</li>
+					<li><b>Ryan Eustice</b> University of Michigan</li>
+					<li><b>Andreas Geiger</b> Max Planck Institute for Intelligent Systems, Perceiving Systems</li>
+					<li><b>Shoudong Huang</b> University of Technology, Sydney</li>
+					<!--
+					<li><b></li>
+					<li><b></li>
+					<li><b></li>
+					-->
+
+					</ul>
+				</p>
 			</div>
 			<div class="col">
 				<h1>Your Questions</h1>
