--- a/movingsensors/index.html
+++ b/movingsensors/index.html
@@ -174,10 +174,10 @@ Program Committee
 			<div class="col">
 				<h1>Your Questions</h1>
 				<p>
-				  We are hoping to collect questions from the community regarding the current state and future goals of SLAM. The questions will be answered at an interactive discussion session at the workshop. 
+				  We are hoping to collect questions from the community regarding the current state and future goals of SLAM. The questions will be answered at an interactive discussion session at the workshop. Questions can be contributed by joining the community below or clicking <a href="https://plus.google.com/communities/102832228492942322585">here</a>. 
 				  
 				</p>  
-				  <div class="g-community" data-href="https://plus.google.com/communities/102832228492942322585"></div>
+				  <div class="g-community" data-href="https://plus.google.com/communities/102832228492942322585" data-layout="landscape" data-width="300"></div>
 				  <!-- Further details will be made available here as the time for the workshop nears. -->
 				
 			</div>
