updated confirmed speaker list

--- a/movingsensors/index.html
+++ b/movingsensors/index.html
@@ -186,6 +186,8 @@ Program Committee
 					<li><b>Ryan Eustice</b> University of Michigan</li>
 					<li><b>Andreas Geiger</b> Max Planck Institute for Intelligent Systems, Perceiving Systems</li>
 					<li><b>Shoudong Huang</b> University of Technology, Sydney</li>
+					<li><b>Juan Domingo Tardos</b>University of Zaragoza</li>
+					<li><b>Zeeshan Zia</b>Imperial College London</li>
 					<!--
 					<li><b></li>
 					<li><b></li>
