--- a/movingsensors/index.html
+++ b/movingsensors/index.html
@@ -188,6 +188,7 @@ Program Committee
 					<li><b>Shoudong Huang</b> University of Technology, Sydney</li>
 					<li><b>Juan Domingo Tardos</b> University of Zaragoza</li>
 					<li><b>Zeeshan Zia</b> Imperial College London</li>
+					<li><b>Udo Frese</b> University of Bremen</li>
 					<!--
 					<li><b></li>
 					<li><b></li>
