--- a/movingsensors/index.html
+++ b/movingsensors/index.html
@@ -17,11 +17,17 @@
 
 
 	<header>
-
+		<div id="topImages">
+			<img src="img/rss-logo.png" width=65% align="center"/> 
+			<img src="img/ACRV-logo.jpg" width=34% align="center" />
+		</div>
 		<div id="logo-container">
+			
 			<div id="logo"><a>The Problem of Mobile Sensors:</a></div>
 			<div id="subtitle">Setting future goals and indicators of progress for SLAM </div>
 			<div id="subtitle">Workshop in conjunction with <a href="http://www.roboticsconference.org/">RSS 2015</a></div>
+			<div id="subtitle">Sponsored by <a href="http://roboticvision.org">ACRV</a></div>
+			
 		</div>
  		<nav>
 			<ul>
@@ -52,12 +58,44 @@
 			</div>
 		</section>
 		-->
+	
+		<section class="row">
+			<div class="col-full">
+				<h1>News/Updates</h1>
+				<p>
+					<ul>
+					<li>- The workshop received a sponsorship from <a href="http://roboticvision.org">ACRV</a></li>
+					<li>- An award of AUD 500 for the best poster has been approved </li>
+					<li>- Updated list of confirmed Speakers</li>
+					</ul>
+				</p>
+	
 		<section class="row">
 			<div class="col-full">
 				<h1>Objective</h1>
 			    <p>
 			      Simultaneous Localization and Mapping (SLAM) is an important problem in mobile robotics and its solution is fundamental in order to achieve true autonomy. As soon as sensors start moving in an environment, we have a SLAM problem. The goal of the workshop is to define an agenda for future research on SLAM and will mainly consist of two main themes: firstly, the workshop will provide an occasion to discuss what the community expects from a complete SLAM solution and secondly, top researchers in the field will provide an overview on where we stand today and what future directions need to be taken to achieve the perceived goal.
 			    </p>
+			    <h1>Confirmed Speakers</h1>
+				<p>
+					<ul>
+					<li><b>John Leonard</b> Massachusetts Institute of Technology</li>
+					<li><b>Davide Scaramuzza</b> University of Zurich</li>
+					<li><b>Ryan Eustice</b> University of Michigan</li>
+					<li><b>Andreas Geiger</b> Max Planck Institute for Intelligent Systems, Perceiving Systems</li>
+					<li><b>Shoudong Huang</b> University of Technology, Sydney</li>
+					<li><b>Juan Domingo Tardos</b> University of Zaragoza</li>
+					<li><b>Zeeshan Zia</b> Imperial College London</li>
+					<li><b>Udo Frese</b> University of Bremen</li>
+					<li><b>Patrick Pfaff</b> KUKA Robotics</li>
+					<!--
+					<li><b></li>
+					<li><b></li>
+					<li><b></li>
+					-->
+
+					</ul>
+				</p>
 			</div>
 		</section>
 		<a name="organizers"></a>
@@ -132,7 +170,7 @@ We solicit contributions regarding the following topics:
 </p>
 <p>
 Papers have to be submitted as a single PDF file and will be reviewed by the program committee. 
-Multimedia demonstrations are also encouraged.  
+Multimedia demonstrations are also encouraged. <b> A cash prize of AUD 500 has been sponsored by ACRV for the best poster award. </b>
 </p><p>
 Please submit your manuscript at:<br/>
 <a href="https://cmt.research.microsoft.com/MS2015/">https://cmt.research.microsoft.com/MS2015/</a>
@@ -177,25 +215,6 @@ Program Committee
 				<h1>Program</h1>
 				<p>
 					To be announced.
-				</p>
-				<h1>Confirmed Speakers</h1>
-				<p>
-					<ul>
-					<li><b>John Leonard</b> Massachusetts Institute of Technology</li>
-					<li><b>Davide Scaramuzza</b> University of Zurich</li>
-					<li><b>Ryan Eustice</b> University of Michigan</li>
-					<li><b>Andreas Geiger</b> Max Planck Institute for Intelligent Systems, Perceiving Systems</li>
-					<li><b>Shoudong Huang</b> University of Technology, Sydney</li>
-					<li><b>Juan Domingo Tardos</b> University of Zaragoza</li>
-					<li><b>Zeeshan Zia</b> Imperial College London</li>
-					<li><b>Udo Frese</b> University of Bremen</li>
-					<!--
-					<li><b></li>
-					<li><b></li>
-					<li><b></li>
-					-->
-
-					</ul>
 				</p>
 			</div>
 			<div class="col">
