--- a/movingsensors/index.html
+++ b/movingsensors/index.html
@@ -64,6 +64,7 @@
 				<h1>News/Updates</h1>
 				<p>
 					<ul>
+					<li>- New extended deadline for submission: <b> May 28th, 2015 </b></a></li>
 					<li>- The workshop received a sponsorship from <a href="http://roboticvision.org">ACRV</a></li>
 					<li>- An award of AUD 500 for the best poster has been approved </li>
 					<li>- Updated list of confirmed Speakers</li>
@@ -136,7 +137,8 @@
 				<h1>Important Dates </h1>
 				
 				   <p>
-				   <i>Submission Due:</i> May 18, 2015<br/>
+				   <i>Submission Due:</i> <s> May 18, 2015 </s><br/>
+				   <i>Submission Due (extended):</i> May 28, 2015<br/>
 				   <i>Acceptance Notification:</i> June 20, 2015<br/>
 				   <i>Camera Ready Papers Due:</i> July 1, 2015<br/>
 				   <i>Workshop: July 17, 2015</i><br/>
