updating confirmed speakers with industry speakers

--- a/movingsensors/index.html
+++ b/movingsensors/index.html
@@ -89,6 +89,8 @@
 					<li><b>Zeeshan Zia</b> Imperial College London</li>
 					<li><b>Udo Frese</b> University of Bremen</li>
 					<li><b>Patrick Pfaff</b> KUKA Robotics</li>
+					<li><b>Joel Hesch</b> Google Tango</li>
+					<li><b>Mario Munich</b> iRobot </li>
 					<!--
 					<li><b></li>
 					<li><b></li>
