adding google people to confirmed speakers

--- a/movingsensors/index.html
+++ b/movingsensors/index.html
@@ -90,6 +90,7 @@
 					<li><b>Udo Frese</b> University of Bremen</li>
 					<li><b>Patrick Pfaff</b> KUKA Robotics</li>
 					<li><b>Joel Hesch</b> Google Tango</li>
+					<li><b>Esha Nerurkar</b> Google Tango</li>
 					<li><b>Mario Munich</b> iRobot </li>
 					<!--
 					<li><b></li>
