added newcombe to list of speakers

--- a/movingsensors/index.html
+++ b/movingsensors/index.html
@@ -93,7 +93,7 @@
 					  <tr><td>15:00-15:30</td><td><b>Joel Hesh and Esha Nerurkar</b><small> Google Tango</td><td> Company Perspective<td></tr>
 					  <tr><td>15:30-16:00</td><td align="center"><b>Spotlight presentations</b><!--(5x6</td><td> 3x10)--><td></tr>
 					  <tr><td>16:00-16:30</td><td align="center"><b>Coffee break and poster session</b><td></tr>
-					  <tr><td>16:30-17:00</td><td><b>Bosch</b></td><td>Company Perspective(TBC)<td></tr>
+					  <tr><td>16:30-17:00</td><td><b>Richard Newcombe</b><small> University of Washington</small></td><td>User Perspective<td></tr>
 					  <tr><td>17:00-17:30</td><td><b>Zeeshan Zia</b><small> Imperial College London</td><td> SLAMBench<td></tr>
 					  <tr><td>17:30-18:00</td><td><b>Andreas Geiger</b><small> Max Planck Institute for Intelligent Systems</td><td> KITTI benchmark ​<td></tr>
 					  <tr><td>18:00-18:30</td><td align="center" ><b>Discussion Panel / Conclusions / Award</b><td></tr>
