removed confirmed speaker and added notification news

--- a/movingsensors/index.html
+++ b/movingsensors/index.html
@@ -64,6 +64,7 @@
 				  <h1>News/Updates</h1>
 				  <p>
 					  <ul>
+					  <li>- Decisions communicated and reviews are now accessible on <a href="https://cmt.research.microsoft.com/MS2015/"><b>CMT</b></a></li>
 					  <li>- New extended deadline for submission: <b> June 5th, 2015 </b></a></li>
 					  <li>- The workshop received a sponsorship from <a href="http://roboticvision.org">ACRV</a></li>
 					  <li>- An award of AUD 500 for the best poster has been approved </li>
@@ -111,6 +112,7 @@
 			      <p>
 				Simultaneous Localization and Mapping (SLAM) is an important problem in mobile robotics and its solution is fundamental in order to achieve true autonomy. As soon as sensors start moving in an environment, we have a SLAM problem. The goal of the workshop is to define an agenda for future research on SLAM and will mainly consist of two main themes: firstly, the workshop will provide an occasion to discuss what the community expects from a complete SLAM solution and secondly, top researchers in the field will provide an overview on where we stand today and what future directions need to be taken to achieve the perceived goal.
 			      </p>
+<!--
 			      <h1>Confirmed Speakers</h1>
 				  <p>
 					  <ul>
@@ -126,14 +128,10 @@
 					  <li><b>Joel Hesch</b> Google Tango</li>
 					  <li><b>Esha Nerurkar</b> Google Tango</li>
 					  <li><b>Mario Munich</b> iRobot </li>
-					  <!--
-					  <li><b></li>
-					  <li><b></li>
-					  <li><b></li>
-					  -->
-
+					  
 					  </ul>
 				  </p>
+-->
 			  </div>
 		  </section>
 		  <a name="organizers"></a>
