adding accepted papers w/ pdfs

--- a/movingsensors/index.html
+++ b/movingsensors/index.html
@@ -64,6 +64,7 @@
 				  <h1>News/Updates</h1>
 				  <p>
 					  <ul>
+					  <li>- Papers available now. (see below) </a></li>
 					  <li>- Decisions communicated and reviews are now accessible on <a href="https://cmt.research.microsoft.com/MS2015/"><b>CMT</b></a></li>
 					  <li>- New extended deadline for submission: <b> June 5th, 2015 </b></a></li>
 					  <li>- The workshop received a sponsorship from <a href="http://roboticvision.org">ACRV</a></li>
@@ -186,7 +187,19 @@
 		  </section>
 		  <section class="row">
 			  <div class="col-full">
-				  <h1>Call for Paper</h1>
+			  <h1> Accepted Paper </h1>
+			  <ul>
+			  <li>-<a href ="cameraReady/paper01.pdf">"Good, Bad and Ugly Graphs for SLAM"</a>, <small>Kasra Khosoussi, Shoudong Huang and Gamini Dissanayake</small></li>
+			  <li>-<a href ="cameraReady/paper02.pdf">"Relative Topometric Localization in Globally Inconsistent Maps"</a>, <small> Mladen Mazuran, Federico Boniardi, Wolfram Burgard and Gian Diego Tipaldi </small></li>
+			  <li>-<a href ="cameraReady/paper03.pdf">"On Decision Making and Planning in the Conservative Information Space - Is the Concept Applicable to Active SLAM?"</a>, <small> Vadim Indelman </small></li>
+			  <li>-<a href ="cameraReady/paper04.pdf">"Incremental Sparse GP Regression for Continuous-time Trajectory Estimation and Mapping"</a>, <small> Xinyan Yan, Vadim Indelman and Byron Boots  </small></li>
+			  <li>-<a href ="cameraReady/paper05.pdf">"Towards Visual SLAM with Event-based Cameras"</a>, <small> Michael Milford, Hanme Kim, Stefan Leutenegger and Andrew Davison</small></li>
+			  <li>-<a href ="cameraReady/paper06.pdf">"Towards Lifelong Feature-Based Mapping in Semi-Static Environments"</a>, <small> David Rosen, Julian Mason and John Leonard </small></li>
+			  <li>-<a href ="cameraReady/paper07.pdf">"Trajectory Alignment and Evaluation in SLAM: Horn’s Method vs Alignment on the Manifold"</a>, <small> Marta Salas, Yasir Latif, Ian Reid and J.M.M. Montiel</small></li>
+			  <li>-<a href ="cameraReady/paper08.pdf">"On the Inclusion of Determinant Constraints in Lagrangian Duality for 3D SLAM"</a>, <small> Roberto Tron, David Rosen and Luca Carlone</small></li>
+			  <li>-<a href ="cameraReady/paper09.pdf">"SLAM - Quo Vadis? In Support of Object Oriented and Semantic SLAM"</a>, <small> Niko Sünderhauf, Feras Dayoub, Sean McMahon, Markus Eich, Ben Upcroft and Michael Milford </small></li>
+			  </ol>
+				  <!--<h1>Call for Paper</h1>
 		  <p>
 		  
 		  Participants are invited to submit extended abstracts (max 2 pages) or full papers (max 8 pages) presenting new or ongoing research.
