--- a/movingsensors/index.html
+++ b/movingsensors/index.html
@@ -64,12 +64,12 @@
 				  <h1>News/Updates</h1>
 				  <p>
 					  <ul>
+					  <li>- Workshop Location: I.T.I.S Galilei, Via Conte Verde 51 00185 Rome (Room: Great Hall)</li>	
 					  <li>- Papers available now. (see below) </a></li>
 					  <li>- Decisions communicated and reviews are now accessible on <a href="https://cmt.research.microsoft.com/MS2015/"><b>CMT</b></a></li>
 					  <li>- New extended deadline for submission: <b> June 5th, 2015 </b></a></li>
 					  <li>- The workshop received a sponsorship from <a href="http://roboticvision.org">ACRV</a></li>
 					  <li>- An award of AUD 500 for the best poster has been approved </li>
-					  <li>- Updated list of confirmed Speakers</li>
 					  </ul>
 				  </p>
 			  </div>
