Updated location and made the program definate

--- a/movingsensors/index.html
+++ b/movingsensors/index.html
@@ -64,7 +64,7 @@
 				  <h1>News/Updates</h1>
 				  <p>
 					  <ul>
-					  <li>- Workshop Location: I.T.I.S Galilei, Via Conte Verde 51 00185 Rome (Room: Great Hall)</li>	
+					  <li>- Workshop Location: I.T.I.S Galilei, Via Conte Verde 51 00185 Rome (Room: Laboratory)</li>	
 					  <li>- Papers available now. (see below) </a></li>
 					  <li>- Decisions communicated and reviews are now accessible on <a href="https://cmt.research.microsoft.com/MS2015/"><b>CMT</b></a></li>
 					  <li>- New extended deadline for submission: <b> June 5th, 2015 </b></a></li>
@@ -78,7 +78,7 @@
 					  <a name="program"></a>
 		  <section class="row">
 			  <div class="col-full">
-				  <h1>Program (Tentative)</h1>
+				  <h1>Program</h1>
 				  <p>
 					  <table width="100%" text-align="center">
 					  <tr><td>08:45-09:00</td><td align="center"><b>Welcome and introduction</b><td></tr>
